test/fail/error_recursive_type_parameter2.sest
module ErrorRecursiveTypeParameter2 = struct

  val f(x, y) = {{ x | foo = y }, { y | bar = x }}

end
